<resources>
    <string name="app_name">Team Rocket Event App</string>
    <string name="Logo_text">Logo Placeholder</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="number_of_events">Number of Events:</string>
    <string name="cancel_login">Cancel</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_address">Address</string>
    <string name="enter_birthdate">Birthdate</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="event_date">Date</string>
    <string name="event_name">Event Name</string>
    <string name="event_sign_up">Sign up for this event</string>
    <string name="event_attendees"># of Attendees:</string>
    <string name="event_location">Location</string>
    <string name="event_city">City</string>
    <string name="event_province">Province</string>
    <string name="event_time">Time</string>
    <string name="event_host">Host:</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="event_no_activities">Nobody has posted anything yet! Be the first to say something!</string>
    <string name="title_activity_event_index">EventIndexActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_events">No events found in the current area.</string>
    <string name="map_description">Map</string>
    <string name="submit">Submit</string>
    <string name="location_placeholder">3359 Mississauga Road</string>
    <string name="title_activity_event_map">Map</string>
    <string name="edit_event">Edit Event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_event">Cancel Event</string>
    <string name="confirm_edit">Confirm</string>
    <string name="sign_out">Sign Out</string>
</resources>
